# check_latency

./: CMakeLists.txt  package.xml
msg/: timemsg.msg
src/: receiver.cpp  transmitter.cpp
